Oookay I guess we use Java 8 now.